Create Rigby SVG illustration

--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -1,1 +1,60 @@
-null
+body {
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+#rigby {
+  position: relative;
+  top: 200px;
+  left: 200px;
+  transform: scale(0.9);
+}
+
+#body {
+  position: relative;
+}
+
+#tail {
+  position: relative;
+  left: 60px;
+  top: -10px;
+  z-index: 0;
+}
+
+#rightArm {
+  position: relative;
+  left: -160px;
+  top: -78px;
+}
+
+#leftArm {
+  position: relative;
+  left: 130px;
+}
+
+#rightLeg {
+  position: relative;
+  left: 230px;
+  top: 70px;
+}
+
+#leftLeg {
+  position: relative;
+  left: 245px;
+  top: 70px;
+}
+
+#eyes {
+  position: relative;
+  top: -179px;
+  left: -302px;
+}
+
+#eyebrows {
+  position: relative;
+  top: -207px;
+  left: -230px;
+}
