--- a/styles/main-style.sass
+++ b/styles/main-style.sass
@@ -24,8 +24,8 @@ body
 
 #rightArm
   position: relative
-  left: -160px
-  top: -78px
+  left: 160px
+  top: -168px
 
 #leftArm 
   position: relative
@@ -51,3 +51,7 @@ body
   top: -207px 
   left: -230px
   
+#eyeStructure
+  position: relative
+  left: 480px
+  top: -135px
