--- a/styles/main-style.sass
+++ b/styles/main-style.sass
@@ -55,3 +55,10 @@ body
   position: relative
   left: 480px
   top: -135px
+
+#blink 
+  opacity: 0
+  position: relative
+  left: -374px
+  top: -179px
+  z-index: 20
