--- a/styles/main-style.sass
+++ b/styles/main-style.sass
@@ -5,9 +5,30 @@ body
   padding: 0
   width: 100vw 
   height: 100vh
-  background-color: rgba(0,0,0,0.8)
+  background-color: rgba(0,0,0,1)
   overflow: hidden
   font-family: $fontFamily
+
+// NAVBAR
+.navbar-container
+  color: white
+  display: flex
+  flex-direction: row
+  justify-content: space-between
+  width: 530px
+  position: absolute
+  right: -35px
+  top: 20px
+  transform: scale(0.7)
+  font-weight: 300
+  letter-spacing: 0.5px
+
+  span:hover
+    color: #26d9a6
+    cursor: pointer
+
+.active
+  color: #26d9a6
 
 // RIGBY PARTS
 #rigby
@@ -113,3 +134,16 @@ body
   transform: scale(0.35)
   left: 258px
   z-index: 20
+
+#faq
+  position: relative
+  top: -1206px
+  right: -297px
+  width: 610px
+  height: 367px
+  background-color: pink
+  background: #ca6e29; /* Old browsers */
+  background: -moz-linear-gradient(45deg, #ca6e29 0%, #ca6f29 16%, #ca6f29 28%, #d82177 74%, #d82177 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(45deg, #ca6e29 0%,#ca6f29 16%,#ca6f29 28%,#d82177 74%,#d82177 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(45deg, #ca6e29 0%,#ca6f29 16%,#ca6f29 28%,#d82177 74%,#d82177 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ca6e29', endColorstr='#d82177',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
