--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -1,3 +1,8 @@
+a {
+  text-decoration: none;
+  color: black;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -6,6 +11,7 @@ body {
   background-color: black;
   overflow: hidden;
   font-family: "Lato", sans-serif, arial;
+  color: white;
 }
 
 .navbar-container {
@@ -126,6 +132,13 @@ body {
   left: -148px;
 }
 
+#faq-title {
+  position: absolute;
+  transform: scale(0.16);
+  top: -165px;
+  right: 535px;
+}
+
 #faq-container {
   position: absolute;
   width: 892px;
@@ -167,4 +180,36 @@ body {
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ca6e29', endColorstr='#d82177',GradientType=1 );
   /* IE6-9 fallback on horizontal gradient */
+}
+
+.rights {
+  position: absolute;
+  transform: scale(0.6);
+  bottom: 10px;
+  left: -25px;
+}
+
+.find-answer {
+  position: relative;
+  z-index: 30;
+  top: -1197px;
+  right: -477px;
+  font-size: 11px;
+}
+
+#button {
+  position: relative;
+  z-index: 30;
+  top: -1197px;
+  right: -507px;
+  width: 300px;
+  height: 100px;
+  background-color: #26d9a6;
+  font-size: 11px;
+  font-weight: 400;
+  padding: 13.52px 83px;
+}
+
+#button:hover {
+  background-color: white;
 }
