--- a/styles/main-style.sass
+++ b/styles/main-style.sass
@@ -188,3 +188,23 @@ body
   &:hover
     background-color: white
     
+// FOOTER
+.footer 
+  display: flex
+  flex-direction: row
+  justify-content: space-between
+  width: 189px
+  position: absolute
+  right: 5px
+  bottom: -235px
+
+  svg 
+    transform: scale(0.3)
+
+    &:hover 
+      path
+        cursor: pointer
+        fill: #26d9a6
+
+  path 
+    transition: all ease-in-out 200ms
