--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -193,15 +193,17 @@ body {
   position: relative;
   z-index: 30;
   top: -1197px;
-  right: -477px;
+  right: -450px;
   font-size: 11px;
+  font-weight: 100;
+  letter-spacing: 1px;
 }
 
 #button {
   position: relative;
   z-index: 30;
   top: -1197px;
-  right: -507px;
+  right: -478px;
   width: 300px;
   height: 100px;
   background-color: #26d9a6;
