--- a/styles/main-style.sass
+++ b/styles/main-style.sass
@@ -118,6 +118,12 @@ body
   top: -73px
   left: -148px
 
+#pink-triangles
+  position: absolute
+  transform: scale(0.4)
+  right: 10px
+  bottom: 10px
+
 // FAQ SECTION
 #faq-title
   position: absolute
