--- a/styles/main-style.sass
+++ b/styles/main-style.sass
@@ -36,6 +36,10 @@ body
   color: #26d9a6
 
 // RIGBY PARTS
+#rigbyContainer 
+  position: absolute
+  right: 880px
+
 #rigby
   position: relative
   top: 231px
@@ -122,7 +126,7 @@ body
   position: absolute
   transform: scale(0.4)
   right: 10px
-  bottom: 10px
+  bottom: 7px
 
 // FAQ SECTION
 #faq-title
@@ -171,6 +175,7 @@ body
   transform: scale(0.6)
   bottom: 10px
   left: -25px
+  font-weight: 100
 
 .find-answer
   position: relative
@@ -218,3 +223,39 @@ body
 
   path 
     transition: all ease-in-out 200ms
+
+// CROSS ANIMATION
+#crossContainer
+  position: absolute
+  display: flex
+  justify-content: space-between
+  width: 75px
+  top: 120px
+  right: 1077px
+
+#cross-1
+  position: relative 
+  width: 10px
+#cross-2
+  position: relative 
+  width: 10px
+#cross-3
+  position: relative 
+  width: 10px
+#cross-4
+  position: relative 
+  width: 10px
+
+.pink-cross-a
+  fill: #feb7ee
+  
+.pink-cross-b
+  fill: #dd52dd
+  
+.yellow-cross-a
+  fill: #fffd45
+
+.yellow-cross-b
+  fill: #fffd45
+  
+// less than 1245 hide everything
