Correct rigby position and svg error

--- a/styles/main-style.sass
+++ b/styles/main-style.sass
@@ -38,27 +38,27 @@ body
 // RIGBY PARTS
 #rigbyContainer 
   position: absolute
-  right: 880px
+  right: 1230px
 
 #rigby
-  position: relative
+  position: absolute
   top: 231px
   left: 54px
   transform: scale(0.9)
 
 #body 
-  position: relative
+  position: absolute
 
 #tail
   position: relative
   left: 60px
-  top: -20px
+  top: 20px
   z-index: 0
 
 #rightArm
   position: relative
-  left: 160px
-  top: -168px
+  left: 155px
+  top: -128px
 
 #leftArm 
   position: relative
@@ -66,23 +66,23 @@ body
   
 #rightLeg
   position: relative 
-  left: 230px
-  top: 55px
+  left: 215px
+  top: 92px
 
 #leftLeg
   position: relative 
   left: 245px
-  top: 55px
+  top: 92px
 
 #eyes
   position: relative
-  top: -179px
-  left: -302px
+  top: -136px
+  left: -310px
 
 #eyebrows 
   position: relative 
-  top: -207px 
-  left: -230px
+  top: -167px 
+  left: -240px
   
 #eyeStructure
   position: relative
@@ -92,8 +92,8 @@ body
 #blink 
   opacity: 0
   position: relative
-  left: -374px
-  top: -179px
+  left: -243px
+  top: -178px
   z-index: 20
 
 // THREE BEARS
