--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -1,3 +1,11 @@
+#loading {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  background-color: black;
+  z-index: 40;
+}
+
 a {
   text-decoration: none;
   color: black;
