--- a/styles/main-style.sass
+++ b/styles/main-style.sass
@@ -1,5 +1,13 @@
 $fontFamily: 'Lato', sans-serif, arial
 
+// LOADING
+#loading
+  position: absolute
+  width: 100vw 
+  height: 100vh
+  background-color: black
+  z-index: 40
+
 a 
   text-decoration: none
   color: black
