--- a/styles/main-style.sass
+++ b/styles/main-style.sass
@@ -7,6 +7,7 @@ $fontFamily: 'Lato', sans-serif, arial
   height: 100vh
   background-color: black
   z-index: 40
+  opacity: 1
 
 a 
   text-decoration: none
